content/vault/v2.x/content/docs/deploy/kubernetes/helm/enterprise.mdx
---
layout: docs
page_title: Vault Enterprise license management
description: >-
  Vault Helm supports deploying Vault Enterprise, including license autoloading.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-04-15T00:15:07.000Z
last_modified: 2026-04-15T00:15:07.000Z
# END AUTO GENERATED METADATA
---

# Vault Enterprise license management

You can use this Helm chart to deploy Vault Enterprise by following a few extra steps around licensing.

~> **Note:** As of Vault Enterprise 1.8, the license must be specified via HCL configuration or environment variables on startup, unless the Vault cluster was created with an older Vault version and the license was stored. More information is available in the [Vault Enterprise License docs](/vault/docs/enterprise/license).

@include 'helm/version.mdx'

## Vault enterprise 1.8+

### License install

First create a Kubernetes secret using the contents of your license file. For example, the following commands create a secret with the name `vault-ent-license` and key `license`:

```bash
secret=$(cat 1931d1f4-bdfd-6881-f3f5-19349374841f.hclic)
kubectl create secret generic vault-ent-license --from-literal="license=${secret}"
```

-> **Note:** If you cannot find your `.hclic` file, please contact your sales team or Technical Account Manager.

In your chart overrides, set the values of [`server.image`](/vault/docs/platform/k8s/helm/configuration#image-2) to one of the enterprise [release tags](https://hub.docker.com/r/hashicorp/vault-enterprise/tags). Also set the name of the secret you just created in [`server.enterpriseLicense`](/vault/docs/platform/k8s/helm/configuration#enterpriselicense).

```yaml
# config.yaml
server:
  image:
    repository: hashicorp/vault-enterprise
    tag: 2.0.2-ent
  enterpriseLicense:
    secretName: vault-ent-license
```

Now run `helm install`:

```shell-session
$ helm install hashicorp hashicorp/vault -f config.yaml
```

Once the cluster is [initialized and unsealed](/vault/docs/platform/k8s/helm/run), you may check the license status using the `vault license get` command:

```shell
kubectl exec -ti vault-0 -- vault license get
```

### License update

To update the autoloaded license in Vault, you may do the following:

- Update your license secret with the new license data

```shell
new_secret=$(base64 < ./new-license.hclic | tr -d '\n')

cat > patch-license.yaml <<EOF
data:
  license: ${new_secret}
EOF

kubectl patch secret vault-ent-license --patch "$(cat patch-license.yaml)"
```

- Wait until [`vault license inspect`](/vault/docs/commands/license/inspect) shows the updated license

  Since the `inspect` command is reading the license file from the mounted secret, this tells you when the updated secret has been propagated to the mount on the Vault pod.

```shell
kubectl exec vault-0 -- vault license inspect
```

- Reload Vault's license config

  You may use the [`sys/config/reload/license` API endpoint](/vault/api-docs/system/config-reload#reload-license-file):

```shell
kubectl exec vault-0 -- vault write -f sys/config/reload/license
```

Or you may issue an HUP signal directly to Vault:

```shell
kubectl exec vault-0 -- pkill -HUP vault
```

- Verify that [`vault license get`](/vault/docs/commands/license/get) shows the updated license

```shell
kubectl exec vault-0 -- vault license get
```

## Vault enterprise prior to 1.8

In your chart overrides, set the values of `server.image` to one of the enterprise [release tags](https://hub.docker.com/r/hashicorp/vault-enterprise/tags). Install the chart, and initialize and unseal vault as described in [Running Vault](/vault/docs/platform/k8s/helm/run).

After Vault has been initialized and unsealed, setup a port-forward tunnel to the Vault Enterprise cluster:

```shell
kubectl port-forward vault-0 8200:8200
```

Next, in a separate terminal, create a `payload.json` file that contains the license key like this example:

```json
{
  "text": "01ABCDEFG..."
}
```

Finally, using curl, apply the license key to the Vault API:

```bash
curl \
  --header "X-Vault-Token: VAULT_LOGIN_TOKEN_HERE" \
  --request POST \
  --data @payload.json \
  http://127.0.0.1:8200/v1/sys/license

```

To verify that the license installation worked correctly, using `curl`, run the following:

```shell
curl \
  --header "X-Vault-Token: VAULT_LOGIN_TOKEN_HERE" \
  http://127.0.0.1:8200/v1/sys/license
```

## Redundancy zones

<EnterpriseAlert product="vault" />

Vault Enterprise supports [redundancy zones](/vault/docs/enterprise/redundancy-zones) for improved availability and fault tolerance across availability zones. Starting with Helm chart version 0.33.0, you can enable automatic zone detection for Vault clusters running on Kubernetes 1.35+.

### Requirements

- **Vault Enterprise** with a valid license
- **Kubernetes 1.35+** (requires PodTopologyLabelsAdmission feature, enabled by default)
- **HA mode enabled** (`server.ha.enabled=true`)
- **Raft storage enabled** (`server.ha.raft.enabled=true`)
- **Node labels**: Nodes must be labeled with `topology.kubernetes.io/zone`
- **Configuration placeholder**: The `autopilot_redundancy_zone = "VAULT_REDUNDANCY_ZONE"` placeholder must be present in `server.ha.raft.config`

### Configuration

To enable redundancy zones, set `server.ha.raft.redundancyZones.enabled=true` and add the `VAULT_REDUNDANCY_ZONE` placeholder to your Raft configuration:

```yaml
server:
  image:
    repository: hashicorp/vault-enterprise
    tag: 2.0.2-ent
  
  enterpriseLicense:
    secretName: vault-ent-license
  
  ha:
    enabled: true
    replicas: 6  # 2 voting nodes per zone across 3 zones
    raft:
      enabled: true
      redundancyZones:
        enabled: true
      config: |
        ui = true
        
        listener "tcp" {
          tls_disable = 1
          address = "[::]:8200"
          cluster_address = "[::]:8201"
        }
        
        storage "raft" {
          path = "/vault/data"
          autopilot_redundancy_zone = "VAULT_REDUNDANCY_ZONE"
        }
        
        service_registration "kubernetes" {}
  
  # Recommended: Ensure pods are distributed across zones
  topologySpreadConstraints: |
    - maxSkew: 1
      topologyKey: topology.kubernetes.io/zone
      whenUnsatisfiable: DoNotSchedule
      labelSelector:
        matchLabels:
          app.kubernetes.io/name: {{ template "vault.name" . }}
          app.kubernetes.io/instance: {{ .Release.Name }}
          component: server
```

### How it works

When redundancy zones are enabled:

1. The Helm chart validates that all requirements are met at installation time
2. Kubernetes exposes the node's `topology.kubernetes.io/zone` label to each pod via the Downward API
3. The zone label is injected as the `VAULT_REDUNDANCY_ZONE` environment variable
4. During startup, the chart substitutes the placeholder in the Raft configuration with the actual zone value
5. Vault Autopilot uses this zone information to maintain voting and non-voting replicas across zones

### Pod disruption budget

When redundancy zones are enabled, the default `maxUnavailable` for the PodDisruptionBudget changes from `⌊(n-1)/2⌋` to `1`. This is because the PDB cannot distinguish between voting and non-voting pods, and the standard formula could allow enough simultaneous evictions to lose quorum among voting members.

You can override this default if needed:

```yaml
server:
  ha:
    disruptionBudget:
      maxUnavailable: 2  # Custom value
```

### Topology spread constraints

While not strictly required, it is **strongly recommended** to configure `topologySpreadConstraints` to ensure pods are actually distributed across availability zones. Without this, Kubernetes may schedule multiple pods in the same zone, defeating the purpose of redundancy zones.

The Helm chart will display a warning if redundancy zones are enabled without topology spread constraints.

### Verification

After deploying with redundancy zones enabled, verify the configuration:

```shell
# Check that pods have zone labels
kubectl get pods -l app.kubernetes.io/name=vault -o jsonpath='{range .items[*]}{.metadata.name}{"\t"}{.metadata.labels.topology\.kubernetes\.io/zone}{"\n"}{end}'

# Verify Raft configuration includes zone information
kubectl exec vault-0 -- vault operator raft list-peers

# Check Autopilot state (after initialization)
kubectl exec vault-0 -- vault operator raft autopilot state
```

For more information about redundancy zones, see the [Vault Enterprise redundancy zones documentation](/vault/docs/enterprise/redundancy-zones).
